Fix style and issues as in 2.4.30